# prd-tasksmith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: output.json  output.md  sample_prd.md
src/prd_tasksmith/: __init__.py  __main__.py
tests/: test_cli.py  test_project_assets.py
