[project]
name = "prd-tasksmith"
version = "0.1.0"
description = "Turn PRDs into implementation task cards with optional AI polish."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "PRD Tasksmith contributors" }]

[project.scripts]
prd-tasksmith = "prd_tasksmith.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
