[project]
name = "prd-tasksmith"
version = "0.1.0"
description = "Turn PRDs into implementation task cards with optional AI polish."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "PRD Tasksmith contributors" }]
keywords = ["ai", "prd", "product-management", "task-planning", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/niuxinhuai/prd-tasksmith"
Repository = "https://github.com/niuxinhuai/prd-tasksmith"
Issues = "https://github.com/niuxinhuai/prd-tasksmith/issues"

[project.scripts]
prd-tasksmith = "prd_tasksmith.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
